--- a/app/views/pois/show.html.erb
+++ b/app/views/pois/show.html.erb
@@ -1,2 +1,9 @@
 <h1>Pois#show</h1>
-<p>Find me in app/views/pois/show.html.erb</p>
+
+<div
+  id="map"
+  style="width: 100%;
+  height: 600px;"
+  data-marker="<%= @marker.to_json %>"
+  data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
+></div>
