--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,9 +1,19 @@
+<div class="container">
 <h2>Sign up</h2>
 
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= f.error_notification %>
+<%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
+      <%= devise_error_messages! %>
+
 
   <div class="form-inputs">
+    <%= f.input :username %>
+    <%= f.input :first_name %>
+    <%= f.input :last_name %>
+    <%= f.input :address %>
+
+
     <%= f.input :email,
                 required: true,
                 autofocus: true ,
@@ -15,6 +25,8 @@
     <%= f.input :password_confirmation,
                 required: true,
                 input_html: { autocomplete: "new-password" } %>
+    <%= f.input :photo %>
+    <%= f.input :photo_cache, as: :hidden %>
   </div>
 
   <div class="form-actions">
@@ -23,3 +35,6 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
+
+------------------
