added mapped, center on Paris, removed labels

--- a/app/views/pois/show.html.erb
+++ b/app/views/pois/show.html.erb
@@ -1,9 +1,10 @@
-<h1>Pois#show</h1>
-
 <div
   id="map"
-  style="width: 100%;
-  height: 600px;"
-  data-marker="<%= @marker.to_json %>"
+  style="width: 100vw;
+  height: 100vh;"
+
   data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
 ></div>
+
+<!--
+ data-marker="<%= @marker.to_json %>" -->
