--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,2 +1,19 @@
-<h1>Games#show</h1>
-<p>Find me in app/views/games/show.html.erb</p>
+<div class="container">
+  <div class="title">
+    <%= image_tag("rocket.svg") %>
+    <h1>CONGRATS</h1>
+    <%= image_tag("rocket.svg") %>
+  </div>
+  <div class="score title">
+    <h2>Your score:</h2>
+  </div>
+  <div class="buttons">
+    <div class="row">
+      <div class="col-xs-12">
+        <button class="btn btn-primary">Play again</button>
+        <button class="btn btn-primary">Challenge a friend</button>
+        <button class="btn btn-primary">Share on Facebook</button>
+      </div>
+    </div>
+  </div>
+</div>
