--- a/app/assets/stylesheets/pages/_games_show.scss
+++ b/app/assets/stylesheets/pages/_games_show.scss
@@ -13,8 +13,17 @@
 
 .container-main {
   margin: 70px 0px;
+
+  .row {
+    margin-bottom: 30px;
+  }
 }
 
 .container {
   height: 100vh;
+}
+
+.map-container {
+  height: 150px;
+  background-color: $gray;
 }
