--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -10,7 +10,7 @@ $body-bg:                 $light-gray;
 $font-size-base: 18px;
 
 // Colors
-$gray-base:       $gray;
+$gray-base:       $black;
 $brand-primary:   $purple;
 $brand-success:   $green;
 $brand-info:      $yellow;
