--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -14,7 +14,7 @@
   align-items: center;
   // margin-bottom: 20px;
   // margin-top: 20px;
-  min-height: calc(100vh - 70px);
+  min-height: calc(100vh - 100px);
 }
 
 .form-inputs.checkout {
@@ -48,11 +48,11 @@ label {
 
 a {
   text-align: text-center;
-  color: #2ed3b5;
+  color: #860CE6;
 }
 
 .form-control:focus {
-  border-color: #2ed3b5;
+  border-color: #860CE6;
   outline: 0;
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6);
 }
