--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,9 +10,9 @@
     <%= stylesheet_pack_tag 'application', media: 'all' %>
   </head>
   <body>
-
+  <% if !current_page?(game_poi_path) %>
       <%= render 'shared/navbar' %>
-
+    <% end %>
     <%= render 'shared/flashes' %>
     <p class="notice"><%= notice %></p>
 
