--- a/app/views/pois/show.html.erb
+++ b/app/views/pois/show.html.erb
@@ -1,8 +1,11 @@
+<div>
+  <h2> <%= "Can you find the #{@poi.name}?" %></h2>
+</div>
+
 <div
   id="map"
   style="width: 100vw;
   height: 100vh;"
-
   data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
 ></div>
 
