--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
     <%= stylesheet_pack_tag 'application', media: 'all' %>
   </head>
   <body>
-    <% if !current_page?(game_poi_path) %>
+    <% unless (params[:controller] == 'pois' && params[:action] == 'show') %>
       <%= render 'shared/navbar' %>
       <%= render 'shared/flashes' %>
     <p class="notice"><%= notice %></p>
