--- a/app/views/pois/show.html.erb
+++ b/app/views/pois/show.html.erb
@@ -8,7 +8,13 @@
   height: 100vh;"
   data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
 ></div>
-
+  <div style="display: none;">
+      <%= simple_form_for [@game, @poi, @answer] do |f| %>
+        <%= f.input :latitude %>
+        <%= f.input :longitude %>
+        <%= f.submit class: "btn btn-form"%>
+      <% end %>
+  </div>
 <!--
  data-marker="<%= @marker.to_json %>" -->
 <script type="text/javascript">
