--- a/app/assets/stylesheets/components/_modal.scss
+++ b/app/assets/stylesheets/components/_modal.scss
@@ -4,11 +4,11 @@
 
 .btn-close {
   height: 25px;
-  margin-right: -20px;
-  margin-top: -20px;
+  margin-right: -50px;
+  margin-top: -50px;
 }
 
-.btn-hover {
+.btn-close:hover {
   color: $purple;
 }
 
@@ -18,23 +18,29 @@
 }
 
 .m-h {
-  position: absolute;
-  top: 0;
+  // top: 15px;
+  // left: 34px;
   border-bottom: 1px solid $purple;
 }
 
 .m-c {
-  position: relative;
+  background-image: image-url("card_modal.svg");
+  background-size: 100% 100%;
   border: none;
   border-radius: 0px;
   box-shadow: none;
   background-clip: padding-box;
   outline: 0;
-  background-color: rgba(255, 255, 255, 0.0)
+  background-color: rgba(255, 255, 255, 0);
+  padding: 20px;
 }
 
 .m-b {
-  position: absolute;
-  bottom: 88px;
+  position: relative;
+  // bottom: 88px;
   padding: 15px;
+}
+
+.POI-mod-header {
+  background-image: image_tag("rocket.svg");
 }
