timing et distance ajouter au controller create

--- a/app/views/pois/show.html.erb
+++ b/app/views/pois/show.html.erb
@@ -5,19 +5,16 @@
 <div
   id="map"
   style="width: 100vw;
-  height: 100vh;"
+  height: 80vh;"
   data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
 ></div>
-  <div style="display: none;">
-      <%= simple_form_for [@game, @poi, @answer] do |f| %>
+<!--   <div style="display: none;">
+ -->      <%= simple_form_for [@game, @poi, @answer] do |f| %>
         <%= f.input :latitude %>
         <%= f.input :longitude %>
+        <%= f.input :time_to_respond %>
         <%= f.submit class: "btn btn-form"%>
       <% end %>
-  </div>
-<!--
+<!--   </div>
+ --><!--
  data-marker="<%= @marker.to_json %>" -->
-<script type="text/javascript">
-
-
-</script>
