seed + card beginning

--- a/app/assets/stylesheets/pages/_games_show.scss
+++ b/app/assets/stylesheets/pages/_games_show.scss
@@ -47,3 +47,9 @@
 .POI-img {
   width: 500px;
 }
+
+.game-card {
+  background-image: image-url("card_modal.svg");
+  height: 120px;
+  cursor: pointer;
+}
