--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -25,9 +25,9 @@
           <div class="POI-list-container">
             <div class="row">
               <% @pois.each do |poi| %>
-                <div class="col-xs-12 col-md-4 text-center">
+                <div class="col-xs-12 col-md-6 text-center">
                   <!-- Button trigger modal -->
-                  <button type="button" class="btn btn-primary btn-fw" data-toggle="modal" data-target="#poiModal<%= poi.id %>"><%= poi.name %></button>
+                  <div class="game-card" style="background-image: url(<%= cl_image_path(poi.photo)%>)" data-toggle="modal" data-target="#poiModal<%= poi.id %>"><%= poi.name %></div>
                 </div>
               <% end %>
             </div>
