--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -2,7 +2,8 @@
 @import "alert";
 @import "navbar";
 @import "footer";
-@import "button";
 @import "modal";
 @import "form";
 @import "btn";
+@import "card";
+@import "banner";
