--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,5 @@
-<div class="container">
-  <h1>Pages#home</h1>
-  <p>Find me in app/views/pages/home.html.erb</p>
+<div class="container" id="cards-from-paris">
+
   <h2>Liste des pages path </h2>
   <ul>
     <li>
@@ -23,8 +22,5 @@
     <li>
       <%= link_to "GAMES (games_url)", games_url %>
     </li>
-
-
-
   </ul>
 </div>
