--- a/app/views/themes/index.html.erb
+++ b/app/views/themes/index.html.erb
@@ -1,2 +1,51 @@
 <h1>Themes#index</h1>
 <p>Find me in app/views/themes/index.html.erb</p>
+<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url(<%= asset_path 'Banner-mind-the-map.png' %>);">
+  <div class="banner-content">
+    <h1>Mind the Map</h1>
+    <p>Can you locate places on an unlabeled map ?</p>
+    <!-- Lien du bouton passer sur une URL absolu pour permettre de revenir à une page sans search -->
+    <a class="btn btn-form btn-lg" href="<%="#{root_path}#cards-from-paris"%>">Play now</a>
+  </div>
+</div>
+
+<div class="container" id="cards-from-paris">
+  <div class="row">
+    <div class="col-xs-12 col-sm-4">
+      <% @themes.each do |theme| %>
+      <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('<%= cl_image_path theme.photo%>');">
+        <div class="card-description">
+          <%= theme.name %>
+          <% end %>
+        </div>
+        <a class="card-link" href="#" > <%= link_to ''%> </a>
+      </div>
+    </div>
+  </div>
+</div>
+
+  <h2>Liste des pages path </h2>
+  <ul>
+    <li>
+        <%= link_to "NEW USER (new_user_registration_url)",  new_user_registration_url%>
+    </li>
+    <li>
+      <%= link_to "SIGNIN (new_user_session_url)", new_user_session_url  %>
+    </li>
+    <li>
+      <%= link_to "SIGNOUT (destroy_user_session_url)" , destroy_user_session_url %>
+    </li>
+    <li>
+     <%= link_to "CITIES ALL (cities_url)", cities_url  %>
+    </li>
+    <li>
+      <% @city = City.find(1) %>
+      <%= link_to "SHOW LES THEMES DE LA CITY 1 ( city_themes_url(@city) )", city_themes_url(@city)  %>
+    </li>
+
+    <li>
+      <%= link_to "GAMES (games_url)", games_url %>
+    </li>
+  </ul>
+</div>
+
