--- a/app/assets/stylesheets/pages/_games_show.scss
+++ b/app/assets/stylesheets/pages/_games_show.scss
@@ -49,7 +49,17 @@
 }
 
 .game-card {
-  background-image: image-url("card_modal.svg");
-  height: 120px;
   cursor: pointer;
+}
+
+.game-card-pic {
+  width: 100%;
+  height: 120px;
+  background-size: cover;
+  border-radius: 4px;
+  padding: 10px;
+}
+
+.game-card-col {
+  padding: 10px;
 }
