--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -43,13 +43,13 @@
 
     <div class="row">
       <div class="col-xs-12 col-md-4 text-center">
-        <button class="btn btn-primary btn-fw">Play again</button>
+        <button class="btn btn-primary btn-fw btn-pimp">Play again</button>
+      </div>
+      <div class="col-xs-12 col-md-4 text-center ">
+        <button class="btn btn-primary btn-fw btn-pimp">Challenge a friend</button>
       </div>
       <div class="col-xs-12 col-md-4 text-center">
-        <button class="btn btn-primary btn-fw">Challenge a friend</button>
-      </div>
-      <div class="col-xs-12 col-md-4 text-center">
-        <button class="btn btn-primary btn-fw">Share on Facebook</button>
+        <button class="btn btn-primary btn-fw btn-pimp">Share on Facebook</button>
       </div>
     </div>
 
