--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,5 +1,9 @@
 <div class="container">
 
+  <div class="test">
+    <%= render 'shared/bar_timer' %>
+  </div>
+
   <div class="title">
     <%= image_tag("rocket.svg") %>
     <h1>CONGRATS</h1>
