--- a/app/assets/stylesheets/components/_bar_timer.scss
+++ b/app/assets/stylesheets/components/_bar_timer.scss
@@ -1,1 +1,8 @@
-_bar_timer.scss
+.bar {
+  width: 30em;
+  height: 1em;
+  border-radius: 0.5em;
+  position: relative;
+  background: #f2f2f2;
+  box-shadow: inset 0 0 0 1px rgba(0,0,0,0.1);
+}
