make the markers purple and green again

--- a/app/views/answers/show.html.erb
+++ b/app/views/answers/show.html.erb
@@ -6,6 +6,7 @@
   height: 80vh;"`
   data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
   data-markers="<%= @markers.to_json %>"
+  data-game="off"
 
 ></div>
 <!-- @poi.latitude <%= @poi.latitude  %> <br>
