--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -28,11 +28,24 @@
 .card-description h2 {
   font-size: 24px;
 }
+
 .card-description p {
   font-size: 14px;
   opacity: 0.7;
   font-weight: lighter;
 }
+
+.card-footer {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  bottom: 0px;
+  left:0px;
+  width:100%;
+  height: 25px;
+  background-color: #860CE6;
+}
+
 .card-link {
   position: absolute;
   top: 0;
@@ -43,6 +56,7 @@
   background: black;
   opacity: 0;
 }
+
 .card-link:hover {
   opacity: 0.1;
 }
