--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,8 +15,8 @@
     <% unless (params[:controller] == 'pois' && params[:action] == 'show') %>
       <%= render 'shared/navbar' %>
       <%= render 'shared/flashes' %>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+<!--     <p class="notice"><%= notice %></p> -->
+<!--     <p class="alert"><%= alert %></p> -->
     <% end %>
     <%= yield %>
     <%= javascript_include_tag 'application' %>
