Front ok avec seed ok

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -5,6 +5,7 @@
   background-position: bottom;
   color: white;
   position: relative;
+  margin-bottom: 15px;
 }
 .card-user {
   position: absolute;
