--- a/app/assets/stylesheets/components/_btn.scss
+++ b/app/assets/stylesheets/components/_btn.scss
@@ -82,3 +82,8 @@
 // }
 
 .st0-btn:hover{fill:#6a09b6;}
+
+// .btn-white {
+//   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+//   color: $purple;
+// }
