--- a/app/views/themes/index.html.erb
+++ b/app/views/themes/index.html.erb
@@ -5,28 +5,38 @@
     </div>
     <p>Can you locate places on an unlabeled map ?</p>
     <!-- Lien du bouton passer sur une URL absolu pour permettre de revenir à une page sans search -->
-    <a class="btn btn-form btn-lg" href="<%="#{root_path}#cards-from-paris"%>">Play now</a>
+    <a class="btn btn-form btn-lg btn-white" href="<%="#{root_path}#cards-from-paris"%>">Play now</a>
   </div>
 </div>
 
 <div class="container" id="cards-from-paris">
+
   <h2 align="center">Pick a quiz</h2>
   <div class="row">
-    <div class="col-xs-12 col-sm-4">
-      <% @themes.each do |theme| %>
-      <div class="card-theme">
-        <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('<%= cl_image_path theme.photo%>');">
-        <div class="card-footer">
-          <p><%= theme.name %></p>
-          <% end %>
-        <a class="card-link" href="#" > <%= link_to ''%> </a>
-        </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
 
+    <% @themes.each do |theme| %>
+    <div class="col-xs-12 col-sm-4">
+
+      <div class="card-theme">
+
+        <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('<%= cl_image_path theme.photo%>');">
+          <a class="card-link"> <%= link_to ''%> </a>
+
+          <div class="card-footer">
+            <p><%= theme.name %></p>
+          </div>
+
+        </div>
+
+      </div>
+
+    </div>
+    <% end %>
+
+  </div>
+
+</div>
+<div class="container">
   <h2>Liste des pages path </h2>
   <ul>
     <li>
