--- a/app/views/shared/_bar_timer.html.erb
+++ b/app/views/shared/_bar_timer.html.erb
@@ -1,4 +1,4 @@
 <div class="bar">
-  <div class="percentage has-tip"  style="width: 50%" data-perc="50%">
+  <div class="percentage"  style='height: 50%' data-perc="50%">
   </div>
 </div>
