--- a/app/views/answers/show.html.erb
+++ b/app/views/answers/show.html.erb
@@ -1,7 +1,7 @@
 <div
   id="map"
   style="width: 100vw;
-  height: 80vh;"`
+  height: 100vh;"
   data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
   data-markers="<%= @markers.to_json %>"
   data-game="off"
