added timer on show

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,10 +1,11 @@
 // Import your components CSS files here.
 @import "alert";
-@import "navbar";
-@import "footer";
-@import "modal";
-@import "form";
-@import "btn";
-@import "card";
 @import "banner";
 @import "bar_timer";
+@import "btn";
+@import "card";
+@import "footer";
+@import "form";
+@import "modal";
+@import "navbar";
+@import "wrapper_map";
