--- a/app/assets/stylesheets/components/_bar_timer.scss
+++ b/app/assets/stylesheets/components/_bar_timer.scss
@@ -1,16 +1,21 @@
-.bar {
-  width: 2em;
-  height: 20em;
-  // border-radius: 0.5em;
-  position: relative;
-  background: #f2f2f2;
-  box-shadow: inset 0 0 0 1px rgba(0,0,0,0.1);
+.position-right {
+  position: absolute;
+  right: 30px;
+  z-index: 1000;
 }
 
-.bar .percentage {
-  position: relative;
-  font-size: 1em;
-  background: $purple;
-  height: 1em;
+.bar {
+  width: 2em;
+  height: 80vh;
   // border-radius: 0.5em;
+  position: relative;
+  background: $purple;
+  box-shadow: inset 0 0 0 1px rgba(0,0,0,0.1);
+  .percentage {
+    position: relative;
+    font-size: 1em;
+    background: #f2f2f2;
+    height: 1em;
+    // border-radius: 0.5em;
+  }
 }
