modal_choice_game

--- a/app/assets/stylesheets/components/_btn.scss
+++ b/app/assets/stylesheets/components/_btn.scss
@@ -59,6 +59,7 @@
   outline: 0;
   background-color: rgba(255, 255, 255, 0);
   padding: 10px;
+  color: white;
 }
 
 .btn-pimp:hover {
@@ -72,18 +73,7 @@
   outline: 0;
   background-color: rgba(255, 255, 255, 0);
   padding: 10px;
+  color: white;
 }
 
-// .st0-btn {
 
-//   svg path:hover {
-//     fill: #6a09b6;
-//   }
-// }
-
-.st0-btn:hover{fill:#6a09b6;}
-
-// .btn-white {
-//   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-//   color: $purple;
-// }
