--- a/app/assets/stylesheets/components/_btn.scss
+++ b/app/assets/stylesheets/components/_btn.scss
@@ -74,6 +74,12 @@
   padding: 10px;
 }
 
+.btn-center-bottom {
+  position: absolute;
+  text-align: center;
+  bottom: 30px;
+}
+
 // .st0-btn {
 
 //   svg path:hover {
