plus moyen de cliquer sur la map de la  show answser

--- a/app/views/pois/show.html.erb
+++ b/app/views/pois/show.html.erb
@@ -8,7 +8,7 @@
     style="width: 100vw;
     height: 100vh;"
     data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
-      data-game="off">
+    data-game="on">
     <div class="position-right">
       <%= render 'shared/bar_timer' %>
     </div>
