--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,38 @@
-<h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+<div class="container">
+  <div class="say-hi">
+    <h1 align="center">Hello <%= @user.username %></h1>
+    <div class="best-scores">
+      <div class="title-score">
+        <h2> MY SCORES</h2>
+      </div>
+      <div class="scores-array">
+
+        <div class="scores">
+          <img class="scores-image" src="<%= cl_image_path Game.first.theme.photo %>">
+          <div class="scores-body text-center">
+            <p><%= Game.first.theme.city.name %></p>
+            <p><%= Game.first.theme.name %></p>
+            <p><strong><%= Game.first.score_one %></strong></p>
+          </div>
+          <ul class="list-inline scores-controls hidden-sm hidden-xs">
+            <li><button class="btn btn-primary btn-fw btn-pimp">Play again</button></li>
+            <li><button class="btn btn-primary btn-fw btn-pimp">Challenge a friend</button></li>
+            <li><button class="btn btn-primary btn-fw btn-pimp">Share on Facebook</button></li>
+          </ul>
+        </div>
+
+      </div>
+    </div>
+  </div>
+</div>
+<!--         <div class="row">
+          <div class="col-xs-12 col-md-4 text-center">
+            <button class="btn btn-primary btn-fw btn-pimp">Play again</button>
+          </div>
+          <div class="col-xs-12 col-md-4 text-center ">
+            <button class="btn btn-primary btn-fw btn-pimp">Challenge a friend</button>
+          </div>
+          <div class="col-xs-12 col-md-4 text-center">
+            <button class="btn btn-primary btn-fw btn-pimp">Share on Facebook</button>
+          </div>
+        </div> -->
