remove one useless hover

--- a/app/assets/stylesheets/components/_score.scss
+++ b/app/assets/stylesheets/components/_score.scss
@@ -55,7 +55,7 @@
 }
 
 /* Hover effects */
-.scores:hover {
-  background: #f7f7fa;
-  cursor: pointer;
-}
+// .scores:hover {
+//   background: #f7f7fa;
+//   cursor: pointer;
+// }
