--- a/app/views/answers/show.html.erb
+++ b/app/views/answers/show.html.erb
@@ -6,7 +6,46 @@
     data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
     data-markers="<%= @markers.to_json %>"
     data-game="off"
-  ></div>
+  >
+    <div class="score-card" style="background-image: url(<%= image_path("card_score.svg")%>)">
+      <div class="POI_name text-center">
+        <h1><%= @poi.name %></h1>
+      </div>
+      <div class="POI_distance text-center">
+        <h2><%= @answer.distance %> meters</h2>
+      </div>
+      <div class="row pin">
+        <div class="icon-pin">
+          <%= image_tag("pin_score.svg")%>
+        </div>
+        <div class="score-distance">
+          <p><%= @answer.distance %> meters</p>
+        </div>
+      </div>
+      <div class="row time">
+        <div class="icon icon-time">
+          <%= image_tag("time_score.svg")%>
+        </div>
+        <div class="score-time">
+          <p><%= @answer.time_to_respond %> s</p>
+        </div>
+      </div>
+      <div class="great-bad">
+        <% if @answer.score >= 200 %>
+          <div class="icon icon-great">
+            <%= image_tag("great.svg")%>
+          </div>
+        <% else %>
+          <div class="icon icon-bad">
+            <%= image_tag("bad.svg")%>
+          </div>
+        <% end %>
+      </div>
+      <div class="score-answer">
+        <h1><%= @answer.score %> points</h1>
+      </div>
+    </div>
+  </div>
 </div>
 
 <% if @next_poi.nil? %>
@@ -14,4 +53,3 @@
 <% else %>
 <%= link_to "next POI" , game_poi_url(@game,@next_poi), class: "btn btn-primary btn-fw btn-pimp btn-center-bottom" %>
 <% end %>
-
