footer ok sur pages de results

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -6,7 +6,13 @@
   height: 50px;
   padding: 20px 50px;
   color: rgba(0,0,0,0.3);
+  margin-top: 20px;
 }
+
+.watch-footer{
+  margin-bottom: 40px;
+}
+
 .footer-links {
   display: flex;
   align-items: center;
