--- a/app/assets/stylesheets/components/_score_card.scss
+++ b/app/assets/stylesheets/components/_score_card.scss
@@ -18,8 +18,12 @@
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
+  padding: 20px;
 }
 
+  .POI_name {
+    padding: 0px 5px;
+  }
 
   .icon {
     height :50px;
