--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -9,6 +9,14 @@
   justify-content: center;
   padding-top: 40px;
 }
+
+.banner-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 .banner h1 {
   font-size: 50px;
   font-weight: bold;
@@ -16,9 +24,15 @@
 }
 .banner p {
   font-size: 25px;
-  font-weight: lighter;
+  font-weight: bold;
   margin-bottom: 30px;
-  color: #FFFFFF;
+  color: #000;
+}
+
+.logo-big {
+  width: 250px;
+  height: 250px;
+  margin-bottom: 60px;
 }
 
 body {
