--- a/app/assets/stylesheets/components/_btn.scss
+++ b/app/assets/stylesheets/components/_btn.scss
@@ -67,6 +67,21 @@
   color: white;
 }
 
+.btn-pimp-w {
+  background-image: url("btn-w.svg");
+  background-size: 100% 100%;
+  border: none;
+  border-radius: 0px;
+  box-shadow: none;
+  background-clip: padding-box;
+  outline: 0;
+  background-color: rgba(255, 255, 255, 0);
+  padding: 10px;
+  color: white;
+  font-family: "Shadows Into Light Two";
+  font-size: 24px;
+}
+
 .btn-fw-2 {
   width: 95%;
   margin-top: 15px;
@@ -94,4 +109,3 @@
   bottom: 30px;
   right: 30px;
 }
-
