--- a/app/views/answers/show.html.erb
+++ b/app/views/answers/show.html.erb
@@ -41,14 +41,13 @@
       <div class="score-answer text-center">
         <h1><%= @answer.score %> points</h1>
       </div>
-    </div>
-
-    <div class="button-answer btn-pimp btn-fw-2 text-center">
-      <% if @next_poi.nil? %>
-        <%= link_to "See your score" , game_url(@game), class: "btn-pimp" %>
-      <% else %>
-        <%= link_to "Next POI" , game_poi_url(@game,@next_poi), class: "btn-pimp" %>
-      <% end %>
+      <div class="button-answer btn-pimp-w btn-fw-2 text-center">
+        <% if @next_poi.nil? %>
+          <%= link_to "> See your score" , game_url(@game) %>
+        <% else %>
+          <%= link_to "> Next question" , game_poi_url(@game,@next_poi) %>
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
