--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -8,9 +8,8 @@
 
   <div class="score-title text-center">
     <h2>Your score:</h2>
-    <h4><%= @game.score_one %> points</h4>
+    <h4><%= @total_score %> points</h4>
   </div>
-
   <div class="container-main">
     <div class="row">
       <div class="col-xs-12 col-md-6 text-center">
