--- a/app/views/themes/index.html.erb
+++ b/app/views/themes/index.html.erb
@@ -37,10 +37,10 @@
     <!-- Modal -->
   <div class="modal fade" id="themeModal<%= theme.id %>" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
-      <div class="modal-content m-c">
+      <div class="modal-content m-c-h">
         <div class="modal-header m-h">
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <%= image_tag(("close.svg"), class: "btn-close") %>
+            <%= image_tag(("close.svg"), class: "btn-close-home") %>
           </button>
           <div class="theme-card-pic" style="background-image: url(<%= cl_image_path(theme.photo)%>)">
           </div>
