--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -66,10 +66,14 @@
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content m-c">
           <div class="modal-header m-h">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <%= image_tag(("close.svg"), class: "btn-close") %>
-            </button>
-            <h2 class="modal-title text-center" id="exampleModalLabel"><%= poi.name  %></h2>
+            <div>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <%= image_tag(("close.svg"), class: "btn-close") %>
+              </button>
+            </div>
+            <div>
+              <h2 class="modal-title text-center" id="exampleModalLabel"><%= poi.name  %></h2>
+            </div>
             <div class="POI-mod-header" style="background-image: url(<%= cl_image_path(poi.photo)%>)">
             </div>
           </div>
