--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -1,7 +1,49 @@
+.results-listing {
+  display: flex;
+  position: relative;
+  // margin-left: 60px;
+  // margin-right: 60px;
+}
+
+// .container-banner {
+//   display: flex;
+//   position: sticky !important;
+//   top: 0px;
+//   left: 0px;
+// }
 
 .the-map {
-  flex: 1 1 50%;
-  height: 100vh;
+  display: flex;
+  flex: 0 0 50%;
   position: sticky !important;
   top: 0 !important;
 }
+
+.POI-list {
+  display: flex;
+  flex: 0 0 50%;
+  flex-wrap: wrap;
+  margin-left: 30px;
+  margin-right: 30px;
+}
+
+// .hp-listing {
+//   // padding: 20px 20px;
+//   // padding: 20px 20px;
+//   display: flex;
+// }
+
+// .the-map {
+//   flex: 1 1 50%;
+//   height: 100vh;
+//   position: sticky !important;
+//   top: 0 !important;
+// }
+
+// .cards-container {
+//   display: flex;
+//   flex: 0 0 67%;
+//   flex-wrap: wrap;
+//   margin-left: 30px;
+//   margin-right: 30px;
+// }
