--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,68 +1,85 @@
-<div class="container">
+<div class="container-banner">
 
   <div class="title">
     <%= image_tag("rocket.svg") %>
     <h1>CONGRATS</h1>
     <%= image_tag("rocket.svg") %>
-  </div>
+  </div> <!-- fin de title-->
 
   <div class="score-title text-center">
     <h2>Your score:</h2>
     <h4><%= @game.score_one %> points</h4>
-  </div>
+  </div><!-- fin de score title -->
+</div> <!-- fin de container-banner -->
 
-  <div class="container">
-    <div class="row">
-      <div class="col-xs-12 col-md-6 text-center">
-        <div class="the-map">
-          <div id="map"  style="height: 100vh;" data-markers="<%= @markers.to_json %>"
-          data-game="off"
-          data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
-          </div>
-        </div>
+<div class="container results-listing">
+
+  <div class="row">
+
+    <div class="the-map col-xs-12 col-md-6">
+
+      <div id="map"  style="height: 100vh;" data-markers="<%= @markers.to_json %>" data-game="off" data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
       </div>
-      <div class="col-xs-12 col-md-6 text-center">
-        <div class="POI-list">
-          <p>The <%= @game.theme.name %> you discovered: </p>
-          <div class="POI-list-container">
-            <div class="row">
-              <% @pois.each do |poi| %>
-                <div class="col-xs-12 col-md-6 game-card-col text-center">
-                  <!-- Button trigger modal -->
-                  <div class="game-card" data-toggle="modal" data-target="#poiModal<%= poi.id %>">
-                    <div class="game-card-pic" style="background-image: url(<%= cl_image_path(poi.photo)%>)"></div>
-                    <div class="game-card-title">
-                      <%= poi.name %>
-                    </div>
-                  </div>
+
+    </div> <!-- fin de the-map-->
+
+
+    <div class="POI-list col-xs-12 col-md-6" >
+      <p>The <%= @game.theme.name %> you discovered: </p>
+      <div class="row">
+        <div class="POI-list-container">
+          <% @pois.each do |poi| %>
+
+            <div class="game-card-col col-sm-6 text-center">
+
+              <!-- Button trigger modal -->
+              <div class="game-card" data-toggle="modal" data-target="#poiModal<%= poi.id %>">
+
+                <div class="game-card-pic" style="background-image: url(<%= cl_image_path(poi.photo)%>)">
                 </div>
-              <% end %>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
 
-    <div class="row">
-      <div class="col-xs-12 col-md-4 text-center watch-footer">
-        <button class="btn btn-primary btn-fw btn-pimp">Play again</button>
-      </div>
-      <div class="col-xs-12 col-md-4 text-center watch-footer">
-        <button class="btn btn-primary btn-fw btn-pimp">Challenge a friend</button>
-      </div>
-      <div class="col-xs-12 col-md-4 text-center watch-footer">
-        <button class="btn btn-primary btn-fw btn-pimp">Share on Facebook</button>
-      </div>
+                <div class="game-card-title">
+                  <%= poi.name %>
+                </div> <!-- fin de game-title-->
+
+              </div> <!-- fin de game-card-->
+
+            </div> <!-- fin de game-card-col -->
+
+          <% end %>
+
+        </div> <!-- fin de POI-list-container-->
+
+      </div> <!-- fin de row POI-list-->
+
+    </div> <!-- fin de POI-list-->
+
+  </div> <!-- fin de row -->
+
+  <div class="row">
+    <div class="col-xs-12 col-md-4 text-center watch-footer">
+      <button class="btn btn-primary btn-fw btn-pimp">Play again</button>
+    </div>
+    <div class="col-xs-12 col-md-4 text-center watch-footer">
+      <button class="btn btn-primary btn-fw btn-pimp">Challenge a friend</button>
+    </div>
+    <div class="col-xs-12 col-md-4 text-center watch-footer">
+      <button class="btn btn-primary btn-fw btn-pimp">Share on Facebook</button>
     </div>
   </div>
 
-</div>
+</div> <!-- fin de container -->
+
+
+
+
 
 <!-- MUST STAY AT THE END -->
-<% @pois.each do |poi| %>
-    <!-- Modal -->
-  <div class="modal fade" id="poiModal<%= poi.id %>" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
+<div class="modals">
+  <% @pois.each do |poi| %>
+      <!-- Modal -->
+    <div class="modal fade" id="poiModal<%= poi.id %>" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content m-c">
           <div class="modal-header m-h">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -70,13 +87,16 @@
             </button>
             <h2 class="modal-title text-center" id="exampleModalLabel"><%= poi.name  %></h2>
             <div class="POI-mod-header" style="background-image: url(<%= cl_image_path(poi.photo)%>)">
-            </div>
-          </div>
+            </div> <!-- fin de POI-mod-header -->
+          </div> <!-- fin de modal-header -->
+
           <div class="modal-body">
             <p><%= poi.description %></p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-<% end %>
+          </div> <!-- fin de modal-body-->
+
+        </div> <!-- fin de modal-content -->
+      </div> <!-- fin de modal-dialog -->
+    </div><!-- fin de modal-fade -->
+  <% end %>
+</div> <!-- fin de modals-->
+
