--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -1,8 +1,16 @@
 .results-listing {
   display: flex;
-  position: relative;
-  // margin-left: 60px;
-  // margin-right: 60px;
+  // position: relative;
+  margin-left: 60px;
+  margin-right: 60px;
+}
+
+.toto {
+  margin-left: 60px;
+  margin-right: 60px;
+  display: flex;
+  justify-content: space-around;
+  margin-top: 50px;
 }
 
 // .container-banner {
@@ -12,11 +20,12 @@
 //   left: 0px;
 // }
 
-.the-map {
-  display: flex;
+#map {
+  // display: flex;
   flex: 0 0 50%;
   position: sticky !important;
   top: 0 !important;
+  left: 0 !important;
 }
 
 .POI-list {
