--- a/app/views/pois/show.html.erb
+++ b/app/views/pois/show.html.erb
@@ -11,6 +11,7 @@
     data-game="on">
     <div class="position-right">
       <%= render 'shared/bar_timer' %>
+
     </div>
   </div>
 
@@ -25,4 +26,11 @@
         <%= f.submit class: "btn btn-form"%>
       <% end %>
  </div>
+
+<script type="text/javascript">
+ setTimeout(function() {
+   const form = document.getElementById('new_answer');
+   form.submit();
+ }, 13000);
+</script>
 
