--- a/app/views/pois/show.html.erb
+++ b/app/views/pois/show.html.erb
@@ -1,5 +1,5 @@
 <div>
-  <h2> <%= "Can you find the #{@poi.name}?" %></h2>
+  <h2> <%= @counter_left %>/<%= @counter_total %> - <%= "Can you find the #{@poi.name}?" %></h2>
 </div>
 
 <div class="wrapper-map">
