buttons on modal homepage

--- a/app/views/themes/index.html.erb
+++ b/app/views/themes/index.html.erb
@@ -48,10 +48,10 @@
           <p class="text-center">Time to play:</p>
           <div class="row">
             <div class="col-xs-12 col-sm-6 text-center">
-              <%= link_to "Duo", "#", class: "btn-pimp btn-fw text-center c-game" %>
+              <%= link_to "Duo", "#", class: "btn btn-pimp btn-fw text-center" %>
             </div>
             <div class="col-xs-12 col-sm-6 text-center">
-              <%= link_to "Solo", theme_games_url(theme.id) , method: :post,  class: "btn-pimp btn-fw text-center c-game" %>
+              <%= link_to "Solo", theme_games_url(theme.id) , method: :post,  class: "btn btn-pimp btn-fw text-center" %>
             </div>
           </div>
         </div>
